# csrnet-rs

./: .gitignore  Cargo.toml  README.md  mat2h5.py  prepare_dataset.py
csrnet/: Cargo.toml
csrnet-import/: CSRNet_to_ONNX.ipynb  Cargo.toml
csrnet-import/src/: main.rs
csrnet-infer/: Cargo.toml
csrnet-infer/src/: main.rs
csrnet-infer/src/model/: csrnet.rs  mod.rs
csrnet-labeling/: Cargo.toml
csrnet-labeling/src/: main.rs
csrnet-labeling/templates/: labeling.html
csrnet/src/: data.rs  main.rs  train.rs  utils.rs
csrnet/src/model/: csrnet.rs
