[package]
name    = "csrnet-labeling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt     = "0.3.26"
serde         = {version = "1.0.180", features = ["std", "derive"] }
tokio         = {version = "1.32.0",  features = ["full"] }
open          = "5.0.0"
axum          = "0.6.20"
askama        = { version = "0.12.0", features = ["with-axum"] }
askama_axum   = "0.3.0"
tower         = { version = "0.4", features = ["util"] }
tower-http    = { version = "0.4.0", features = ["fs", "trace"] }
##
ndarray       = "0.15.6"
ndarray-npy   = "0.8.1"